# ChangeLog for app-portage/eix
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/eix/ChangeLog,v 1.277 2009/03/27 18:58:56 armin76 Exp $

  27 Mar 2009; Raúl Porcel <armin76@gentoo.org> eix-0.15.2.ebuild,
  eix-0.15.5.ebuild:
  ~m68k love

  24 Mar 2009; Brent Baude <ranger@gentoo.org> eix-0.15.4.ebuild:
  stable ppc64, bug 261569

  22 Mar 2009; Raúl Porcel <armin76@gentoo.org> eix-0.15.4.ebuild:
  arm/ia64/s390/sh stable wrt #262873, add ~m68k

  22 Mar 2009; Markus Meier <maekke@gentoo.org> eix-0.15.4.ebuild:
  x86 stable, bug #261569

  22 Mar 2009; Tobias Klausmann <klausman@gentoo.org> eix-0.15.4.ebuild:
  Stable on alpha, bug #261569

*eix-0.15.5 (21 Mar 2009)

  21 Mar 2009; Jeremy Olexa <darkside@gentoo.org> -eix-0.13.3-r1.ebuild,
  -eix-0.15.3.ebuild, +eix-0.15.5.ebuild:
  Version bump, remove old

  21 Mar 2009; Tiago Cunha <tcunha@gentoo.org> eix-0.15.4.ebuild:
  stable sparc, bug 261569

  21 Mar 2009; Jeroen Roovers <jer@gentoo.org> eix-0.15.4.ebuild:
  Stable for HPPA (bug #261569).

  19 Mar 2009; Thomas Anderson <gentoofan23@gentoo.org> eix-0.15.4.ebuild:
  stable amd64, bug 261569

  19 Mar 2009; Brent Baude <ranger@gentoo.org> eix-0.15.4.ebuild:
  stable ppc, bug 261569

*eix-0.15.4 (31 Jan 2009)

  31 Jan 2009; Jeremy Olexa <darkside@gentoo.org> +eix-0.15.4.ebuild:
  Version bump to fix compilation issues and a few cosmetic changes

*eix-0.15.3 (18 Jan 2009)

  18 Jan 2009; Jeremy Olexa <darkside@gentoo.org> +eix-0.15.3.ebuild:
  version bump, see
  https://projects.gentooexperimental.org/eix/browser/trunk/ChangeLog for
  changes

  07 Jan 2009; Brent Baude <ranger@gentoo.org> eix-0.15.2.ebuild:
  stable ppc64, bug 252245

  29 Dec 2008; Tobias Scherbaum <dertobi123@gentoo.org> eix-0.15.2.ebuild:
  ppc stable, bug #252245

  26 Dec 2008; Jeremy Olexa <darkside@gentoo.org> -eix-0.14.2.ebuild,
  -eix-0.15.1.ebuild, eix-0.15.2.ebuild:
  New DESCRIPTION, requested by upstream
