@@ -1,8 +1,10 @@
 DIST eix-0.15.2.tar.lzma 273817 RMD160 5ca3f68577194fada9cb2804f874a2798fc88aee SHA1 954d1443320886bdbe020eb7c8b58bf0613874ff SHA256 e23cdf54f1327d159c37a9d68737b09ef67ed44ff498dc535373ef29a44133bd
 DIST eix-0.15.4.tar.lzma 276673 RMD160 8c2ffc1e7fbf2802eb8073984fc28011532abf0a SHA1 b73d28693431767086da22cd840a4c8c6b2566c6 SHA256 cece8d8a289e1565b1d4ef878fc43ae06dd7d2d64c2ef7d112e6742c6e484858
 DIST eix-0.15.5.tar.lzma 277120 RMD160 1193609f846f52085fd70f375e8d935dcf089cc9 SHA1 a8694f753ccf26ba7a5d93a09a515eb1bcc66258 SHA256 10b59e9fec8ae5ee49e7ae66da310d444571696e20e43674abf6c6d0d63d9b28
+DIST eix-0.15.6.tar.lzma 276972 RMD160 138404a1c09c16a4887df43b4f6cc03ff233e1e1 SHA1 e60e3ca5ad4e64eeb9bf7b9dda15db805a11d18f SHA256 92fa2a2410b1316555bcbad77a28cea9a59d023fe9a50e1b439524162aac6f12
 EBUILD eix-0.15.2.ebuild 1706 RMD160 a717dd536c875b2f61b2435acc1cb5d499b6d282 SHA1 c0705f0a5d152d3eede9503f7c4766871971ade4 SHA256 42f2f914e36dd90f136dd9f09b09dd502a11f4218ff0850dcc2281424a711248
 EBUILD eix-0.15.4.ebuild 1721 RMD160 55cabeac8a8754ab9cc24526a85a0ebb18ae22d3 SHA1 23c39c891b3a4d30485b20e7679a3ea09b3b734b SHA256 7eda45e61e376df185fe8f1a5882a76aabab21c9f60fcc063d1e4208aa0aa9a6
 EBUILD eix-0.15.5.ebuild 1722 RMD160 b84d3a84e6874957803564256858358bf6e7530d SHA1 21b152480f2dde8ac6763dc5380af978eff2f88f SHA256 7c56f9867f225f0f06fe260d654757c68a142891b7d06fa792bbe176b462226f
-MISC ChangeLog 33883 RMD160 3864ae5943bcd26c2e1c0af359577607731e1296 SHA1 2bafe8e921ebe689158577c64eb449ab8976c0b0 SHA256 2b4cbae8feec87763e84cf9615ee57296fc3f7e56279daaa026bc01b348b0742
+EBUILD eix-0.15.6.ebuild 1723 RMD160 b548a17f4403fcd7f90c0b665b6a7f5e4527fd2a SHA1 4b3f1abd9fc82f08f985d7cf7e1e6a6de0f6a51b SHA256 333ab0f179722cca856e4afff37c4e3417fff686a5bb33f789854291ba8de15c
+MISC ChangeLog 34139 RMD160 50050fc776259ceaada4b6623f4bb522a4071120 SHA1 276c569c7524384f2eac8653b267a166c67f9d38 SHA256 5c8a099e0ff9a7b433b3fcdaf7eccc697de843ee801e717835fe4646371fabee
 MISC metadata.xml 374 RMD160 a5a0cbc1a6ba0732fb30a3ccf0c7e9deb02640b9 SHA1 267a4c9a1c42de09064e4a40c381c606be834e75 SHA256 991f7b0c4c1884b9cc505a3abb481c7f58bbbae35b131bb8977412eaad995cee
