@@ -1,6 +1,14 @@
 # ChangeLog for app-portage/eix
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/eix/ChangeLog,v 1.277 2009/03/27 18:58:56 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/eix/ChangeLog,v 1.279 2009/03/28 14:12:52 darkside Exp $
+
+  28 Mar 2009; Jeremy Olexa <darkside@gentoo.org> eix-0.15.6.ebuild:
+  add ~m68k, they snuck up on me
+
+*eix-0.15.6 (28 Mar 2009)
+
+  28 Mar 2009; Jeremy Olexa <darkside@gentoo.org> +eix-0.15.6.ebuild:
+  Version bump - new 'installedmarked format' feature
 
   27 Mar 2009; Raúl Porcel <armin76@gentoo.org> eix-0.15.2.ebuild,
   eix-0.15.5.ebuild:
